--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,18 @@
         </developer>
     </developers>
 
-
     <dependencies>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.3.7.RELEASE</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
