--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,14 @@
             <version>8.0.28</version>
             <scope>provided</scope>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>4.3.7.RELEASE</version>
             <scope>provided</scope>
         </dependency>
+        -->
     </dependencies>
 
     <build>
@@ -42,8 +44,8 @@
                 <version>3.8.0</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
                 <dependencies>
                     <dependency>
